tests/ui/feature-gates/feature-gate-externally_constructed_attr.stderr
error[E0658]: the `#[mark_externally_constructed]` attribute is an experimental feature
  --> $DIR/feature-gate-externally_constructed_attr.rs:2:1
   |
LL | #[externally_constructed]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #126634 <https://github.com/rust-lang/rust/issues/126634> for more information
   = help: add `#![feature(externally_constructed_attr)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
